# eyefocus

./: .gitignore  README.md  pyproject.toml
frontend/: app.py
ft/: etl.py  etl_self.py  inference.py  train.py  train_modal.py  utils.py
ft/config/: train.yml
src/modeldemo/: __init__.py  utils.py
